--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-confirm-alert": "^3.0.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
